# python-project-83

./: .env.example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: hexlet-check.yml  my_workflow.yml
page_analyzer/: __init__.py  app.py  db.py  routes.py
page_analyzer/templates/: base.html  index.html  show_url.html  url.html  urls.html
